# ai-workshop-django

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
conduit/: settings.py
conduit/apps/articles/: urls.py
conduit/apps/authentication/: urls.py
conduit/apps/profiles/: urls.py
tasks/: 01-ask-plan.md  02-model-comparison.md  03-sql-queries.md  04-workspace-analysis.md  05-fix-errors.md  06-docs-and-tests.md  07-new-endpoint.md  08-context-engineering.md  09-mcp-django-docs.md  10-code-review.md  README.md
